test/type/fail/instantiate_missing.j
class A{
  Void main() {
    new B().f();
    return;
  }
}
